load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt",
)

py_library(
    name = "A348301",
    srcs = ["A348301.py"],
    deps = [
        "@pypi//sympy:pkg",
    ],
)

py_test(
    name = "A348301_test",
    srcs = ["A348301_test.py"],
    deps = [":A348301"],
)

py_library(
    name = "A059861",
    srcs = ["A059861.py"],
    deps = [
        "@pypi//sympy:pkg",
    ],
)

py_test(
    name = "A059861_test",
    srcs = ["A059861_test.py"],
    deps = [":A059861"],
)
