# https://github.com/bazelbuild/rules_python/releases
bazel_dep(name = "rules_python", version = "0.27.1")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
)
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    requirements_lock = "//:requirements_lock.txt",
    python_version = "3.12",
)
use_repo(pip, "pypi")
